--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -948,7 +948,6 @@ p.card-text{
     -webkit-transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
-    width: 100%;
 }
 .artikel .mixitup-control-active .btn-doc-list-artikel{
   font-weight: 900;
@@ -1511,6 +1510,10 @@ p.card-text{
   }
   .container-biro h3{font-size: 18px;}
   .box-img-deptbiro{height: 210px;}
+  .nav-item:hover::before{content: none;}
+  .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu{
+    text-align: center;
+  }
 
 }
 @media (max-width:  905px){
@@ -1648,11 +1651,15 @@ p.card-text{
 
   .sc_sambutan{margin-top: 50px;}
   .section-banner-home .slider-text{height: 200px;}
-}
-@media (max-width: 765px){
+  .sc_jumlahdata h5{
+    display: none;
+  }
   .img-fluid{
     border-radius: 0;
   }
+}
+@media (max-width: 765px){
+  
   .box-tentang{
     width: 80%;
   }
@@ -1846,6 +1853,7 @@ p.card-text{
     .container-media-sosial a{display: flex;}
     .sc_media_sosial .container-media-sosial a{display: block;}
     .box-img-deptbiro{height: 200px;}
+    .img-doc img{min-height: 150px;}
 }
 @media (max-width: 505px) {
    .vertical-center-image{
@@ -1867,9 +1875,10 @@ p.card-text{
 @media (max-width: 420px){
     .desc-list{font-size: 14px;margin: 8px;}
     .box-part{padding: 8px 8px;margin: 6px;border-radius: 7px;}
-    .img-data{width: 30px;height: 30px;}
-    .box-title h4{font-size: 18px;font-weight: 800;}
-    .box-title span{font-size: 10px;font-weight: 800;}
+    .img-data{width: 60px;height: 60px;}
+    .box-data{width: 90%;margin: 0 auto;}
+    .box-title h4{font-size: 21px;font-weight: 800; margin-bottom: -8px;}
+    .box-title span{font-size: 12px;font-weight: 500;}
     .sc_jumlahdata .box-counter{margin-top: 1rem !important;}
     .sc_sambutan, .sc_jumlahdata, .sc_ukm, .sc_logo_nama, .sc_logo{margin-top: 50px;}
     .card-organisasi-pendukung .card-body .card-title{font-size: 15px !important;}
@@ -1884,6 +1893,11 @@ p.card-text{
     .sc_himpunan .list-akun{border-radius: 5px;}
     .h1-banner-beranda{font-size: 24px;}
     .h2-banner-beranda{font-size: 18px;}
+    .section-banner-home .slider-text{height: 300px;}
+    .section-banner-home .h1-banner-beranda{font-size: 30px;}
+    section{margin: 30px 0;}
+    .sc_sambutan, .sc_jumlahdata, .sc_ukm, .sc_logo_nama, .sc_logo{margin-top: 0px;}
+    .box-title{margin-left: 1rem !important;}
 }
 @media (max-width: 991px){
   /*hamburger menu*/
@@ -1964,6 +1978,9 @@ p.card-text{
 .banner-sapakamu .box-img-banner .one-third{
   width: 85%;
 }
+.sc_sapa_kamu{
+  margin: 0px !important;
+}
 .sc_sapa_kamu .box-img{
   display: flex;
 }
@@ -1982,4 +1999,108 @@ p.card-text{
 .img-sapa-kamu .img-doc{
   height: 180px;
   margin: 14px 7px;
+}
+@media (max-width: 992px){
+  /*sapa kamu*/
+  .banner-sapakamu .box-img-banner{
+    text-align: center;
+    position: relative;
+    margin: 0 auto;
+    top: -120px;
+  }
+  .banner-sapakamu .h1-banner-beranda{
+    font-size: 48px;
+  }
+  .box-img-sapa-kamu .doc-list{
+    width: 100%;
+  }
+  .banner-sapakamu .box-img-banner .one-third {
+    width: 55%;
+  }
+}
+
+@media (max-width: 768px){
+  .banner-sapakamu .box-img-banner .one-third{
+    width: 60%;
+  }
+  .sapa-kamu .slider-text{
+    height: 370px;
+  }
+  .title_sapa_kamu .number_sk{
+    font-size: 48px;
+  }
+  .title_sapa_kamu .name_sk{
+    font-size: 36px;
+  }
+  
+}
+
+.btn-fcc, .btn-color:hover{
+      padding: 0;
+    border: none;
+    display: inline-flex;
+    height: 46px;
+    width: 146px;
+    align-items: center;
+    background: #004085;
+    cursor: pointer;
+    position: relative;
+    padding-left: 33px;
+    color: #fff !important;
+    font-weight: 400;
+    text-transform: uppercase;
+    border-radius: 23px;
+    margin-top: 10px;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    -webkit-transition-duration: .3s;
+    transition-duration: .3s;
+}
+.box-button a:before{
+    content: '\f2ee';
+    position: absolute;
+    right: 32px;
+    font-family: Material-Design-Iconic-Font;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    font-size: 13px;
+}
+.box-button a:hover:before{
+    -webkit-animation-name: hvr-icon-wobble-horizontal;
+    animation-name: hvr-icon-wobble-horizontal;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+}
+.btn-first{
+    text-align: center;
+}
+.box-button.second{
+  justify-content: space-between;
+  display: flex;
+}
+.box-button .back .btn-back{
+  background: #dc3545;
+  padding-left: 65px;
+}
+.box-button .back a:before{
+  content: '\f2ea';
+  left: 48px;
+}
+
+#wizard section.hidden{
+  /*visibility: hidden;*/
+  opacity: 0; 
+  transition: visibility 0s linear 0.33s, opacity 0.33s linear;
+  position: absolute;
+}
+
+#wizard section.show{
+  /*visibility: visible;*/
+  position: relative;
+  opacity: 1;
+  transition-delay: 0s;
 }
