--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2104,3 +2104,281 @@ p.card-text{
   opacity: 1;
   transition-delay: 0s;
 }
+/*fms donasi*/
+.banner-donasi .h1-banner-beranda{
+  line-height: 1.2 !important;
+  font-size: 40px;
+}
+.banner-donasi .h4-banner-beranda{
+  font-size: 21px;
+  font-weight: 700;
+}
+.donate-button a{
+  padding: 7px 15px;
+  border-radius: 20px;
+}
+.btn.donate-now{
+  background: #26426b;
+  color: #fff;
+}
+.btn.fund-transparency{
+  background: #A9333A;
+  color: #fff;
+}
+.sc_count_donate .total-donate{
+  display: block;
+  text-align: center;
+  margin: 5rem auto 2.5rem;
+  padding: 30px 40px;
+  /*box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 8px;*/
+  width: fit-content;
+  border-radius: 20px;
+  background: #fff;
+}
+.total-donate h5{
+  font-size: 16px;
+  font-weight: 600;
+}
+.total-donate h1{
+  font-size: 42px;
+  font-weight: 600;
+}
+.sc_count_donate{
+  margin: 0;
+}
+.table-fixed tbody {
+    max-height: 350px;
+    overflow-y: auto;
+    width: 100%;
+}
+
+.table-fixed thead,
+.table-fixed tbody,
+.table-fixed tr,
+.table-fixed td,
+.table-fixed th {
+    display: block;
+}
+
+.table-fixed tbody td,
+.table-fixed tbody th,
+.table-fixed thead > tr > th {
+    float: left;
+    position: relative;
+}
+.table-responsive{
+  width: 70%;
+  margin: 0 auto;
+}
+.table-fixed thead > tr > th{
+  background: #343a40;
+  color: #fff;
+}
+
+.table-fixed tbody td {
+    vertical-align: top;
+    border: 1px solid #ddd;
+}
+
+.box-fund-transparency h3{
+  text-align: center;
+  font-size: 26px;
+  font-weight: 700;
+}
+
+.table-responsive.card{
+    box-shadow: 0 0.46875rem 2.1875rem rgb(4 9 20 / 3%), 0 0.9375rem 1.40625rem rgb(4 9 20 / 3%), 0 0.25rem 0.53125rem rgb(4 9 20 / 5%), 0 0.125rem 0.1875rem rgb(4 9 20 / 3%);
+    border-width: 0;
+    transition: all .2s;
+}
+.sc_form_donate{
+  margin-bottom: 9rem !important;
+}
+.input-group-addon{
+    align-self: center;
+    padding: 9px;
+    background: #42403e !important;
+    color: #fff;
+    border-radius: 0;
+    border-color: #d2d6de;
+}
+.input-radio{
+    margin: 10px auto ;
+}
+.box-btn-donate{
+  float: right;
+}
+.btn-donate-form{
+  padding: 12px 20px;
+  background: #26426b;
+  border-radius: 20px;
+  color: #fff !important;
+  cursor: pointer;
+}
+#phone{
+  border-left: 0;
+  border-radius: 0;
+}
+.sc_form_donate #wizard{
+  width: 100%;
+}
+.btn-donate-form{
+  padding: 12px 50px;
+  font-weight: 600;
+  font-size: 14px;
+}
+.sc_form_donate .wrapper{
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  margin: 0 auto;
+  display: block;
+}
+.sc_donate{
+  margin-bottom: 8rem !important;
+}
+.sc_donate .tab-content{
+  margin-top: 10rem!important;
+}
+.sc_donate h5{
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  width: 50%;
+  margin: 0 auto;
+}
+.sc_donate h3{
+  font-size: 24px;
+  font-weight: 800;
+  margin-bottom: 7px;
+}
+.sc_donate .box-img-tentang{
+  width: 70%;
+}
+.table{
+  margin-bottom: 0 !important;
+}
+.table tbody tr td{
+  font-size: 16px !important;
+}
+.table-responsive.card{
+  word-wrap: inherit !important;
+}
+@media (max-width: 1200px){
+  .table-responsive{
+    width: 90%;
+  }
+}
+@media (max-width: 767px){
+  .banner-donasi .h1-banner-beranda{
+    line-height: normal;
+    letter-spacing: 0px;
+    font-size: 32px;
+  }
+  .banner-donasi .h4-banner-beranda{
+    font-size: 18px;
+  }
+  .banner-donasi .text-kabinet{
+    margin-bottom: 40px !important;
+  }
+  .hero-wrap .box-banner-donasi{
+    height: 100%;
+  }
+  .sc_count_donate .total-donate{
+    margin: 6rem auto 2rem !important;
+  }
+  .total-donate h1{
+    font-size: 38px;
+    font-weight: 800;
+  }
+  .box-btn-donate{
+    float: none;
+    text-align: center;
+  }
+  .col-form-label{
+    text-align: left !important;
+  }
+  .sc_form_donate{
+    margin-bottom: 3rem !important;
+  }
+  .input-radio{
+    margin: 10px auto;
+  }
+  .sc_form_donate .wrapper{
+    width: 100%;
+  }
+  .sc_donate .box-img-tentang{
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    height: 250px;
+    width: 100%;
+  }
+  .sc_donate h5{
+    width: 70%;
+  }
+}
+@media (max-width: 557px){
+  #wizard br{
+    display: none;
+  }
+  .banner-donasi{
+    margin-top: 40px;
+  }
+  .fund-transparency{
+    margin-left: 0 !important;
+  }
+}
+@media (max-width: 515px){
+  .donate-button a{
+    padding: 6px 12px;
+    font-size: 14px;
+    font-weight: 600;
+  }
+  .banner-donasi .h1-banner-beranda{
+    font-size: 28px;
+  }
+  .total-donate h1{
+    font-size: 28px;
+    font-weight: 800;
+  }
+  .sc_count_donate .total-donate{
+    margin: 0 auto !important;
+  }
+  .sc_count_donate .total-donate{
+    padding: 50px 0;
+  }
+  #wizard h1{
+    font-size: 24px;
+  }
+  .sc_donate h5{
+    font-size: 20px;
+  }
+  .sc_donate .tab-content{
+    margin-top: 10rem !important;
+  }
+  .sc_count_donate .total-donate{
+    padding: 50px 0 25px;
+  }
+  .table tbody tr td{
+    font-size: 16px !important;
+  }
+}
+@media (max-width:  400px){
+  .banner-donasi .h1-banner-beranda{
+    font-size: 24px;
+  }
+  .banner-donasi{
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+  }
+  .box-banner-donasi{
+    padding: 5px !important;
+  }
+  .donate-button a{
+    font-size: 12px;
+  }
+  #wizard h1{
+    font-size: 18px;
+  }
+}
