--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -67,7 +67,7 @@ a:hover{
 .h4-banner-beranda{
   font-size: 10.56pt;
   text-align: justify;
-  width: 450px;
+  /*width: 450px;*/
 }
 .content-banner{
   display: flex;
@@ -952,6 +952,14 @@ p.card-text{
 .artikel .mixitup-control-active .btn-doc-list-artikel{
   font-weight: 900;
 }
+/*.artikel-img-box .zoom{
+  width: 120%;
+}*/
+.artikel-img-box img{
+  min-height: 200px !important;
+  width: auto ;
+  max-height: fit-content !important;
+}
 .box-desc-list{
   margin-top: 5rem !important;
   text-align: center;
@@ -999,16 +1007,20 @@ p.card-text{
   font-weight: 800;
   letter-spacing: 3px;
 }
+.artikel-content .publish_date{
+  width: 60%;
+  font-size: 13px;
+}
 .artikel-content .read-article{
   text-align: right;
-  width: 40%;
+  width: 45%;
   font-size: 13px;
 }
 .artikel-content .card{
   background-color: transparent;
 }
 .artikel-content .mix.card{
-  margin: 15px 30px;
+  padding: 15px 20px;
 }
 .artikel-img-box{
   position: relative;
@@ -1039,9 +1051,9 @@ p.card-text{
   padding: 10px;
   border: none;
 }
-.artikel-content .mix.card{
+/*.artikel-content .mix.card{
   padding: 0;
-}
+}*/
 .mix.card .card-body{
   padding: 0.4rem 0;
 }
@@ -1128,7 +1140,7 @@ p.card-text{
 .img-detail-artikel{
   width: 80%;
   margin: 0 auto;
-  max-height: 400px;
+  max-height: 100%;
   overflow: hidden;
   text-align: center;
 }
@@ -1169,7 +1181,7 @@ p.card-text{
 .img-detail-artikel{
   width: 80%;
   margin: 0 auto;
-  height: 430px;
+  max-height: 100%;
   overflow: hidden;
   text-align: center;
 }
@@ -1178,7 +1190,10 @@ p.card-text{
   height: auto;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  transform: translate(0%, -20%);
+  transform: translate(0%, 0%);
+}
+.reference{
+  word-break: break-all;
 }
 .content-detail, .reference-article{
   width: 80%;
@@ -1202,8 +1217,9 @@ p.card-text{
   margin: 0 auto;
 }
 .isi-artikel{
-  font-size: 16px;
-  text-align: justify;
+  font-size: 18px;
+  text-align: left;
+  line-height: 1.7;
 }
 .line-artikel{
   width: 50%;
@@ -1213,6 +1229,18 @@ p.card-text{
 .dateby{
   display: flex;
   justify-content: center;
+}
+.tagline{
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+  margin: 0 auto;
+}
+.listTag{
+  padding: 5px 15px;
+  margin: 5px;
+  border-radius: 3px;
+  background: rgb(217 217 217);
 }
 
 /*Organisasi Pendukung*/
@@ -1530,6 +1558,7 @@ p.card-text{
   .content-tentang{font-size: 80%;}
   .container-biro h3{font-size: 24px;}
   .box-img-deptbiro{height: 160px;}
+  .judul-artikel{font-size: 26px;}
 }
 @media (max-width: 768px){
   .heading-pimpinan{
@@ -1723,6 +1752,7 @@ p.card-text{
         display: flex;
         align-items: center;
     }
+    .artikel .h1-banner-beranda{font-size: 26px;}
 }
 @media (max-width: 576px) {
     .container {
@@ -2092,17 +2122,19 @@ p.card-text{
 }
 
 #wizard section.hidden{
-  /*visibility: hidden;*/
+  visibility: hidden;
   opacity: 0; 
-  transition: visibility 0s linear 0.33s, opacity 0.33s linear;
-  position: absolute;
+  transition: opacity 1s ease-out;
+  position: fixed;
+  /*display: none;*/
 }
 
 #wizard section.show{
-  /*visibility: visible;*/
+  visibility: visible;
   position: relative;
   opacity: 1;
   transition-delay: 0s;
+  /*display: block;*/
 }
 /*fms donasi*/
 .banner-donasi .h1-banner-beranda{
@@ -2110,8 +2142,13 @@ p.card-text{
   font-size: 40px;
 }
 .banner-donasi .h4-banner-beranda{
-  font-size: 21px;
+  font-size: 28px;
   font-weight: 700;
+  letter-spacing: 3px;
+}
+.banner-donasi .h4-banner-beranda a{
+  font-weight: 900;
+  color: #3fa9a5;
 }
 .donate-button a{
   padding: 7px 15px;
@@ -2152,13 +2189,13 @@ p.card-text{
     width: 100%;
 }
 
-.table-fixed thead,
+/*.table-fixed thead,
 .table-fixed tbody,
 .table-fixed tr,
 .table-fixed td,
 .table-fixed th {
     display: block;
-}
+}*/
 
 .table-fixed tbody td,
 .table-fixed tbody th,
@@ -2183,7 +2220,7 @@ p.card-text{
 .box-fund-transparency h3{
   text-align: center;
   font-size: 26px;
-  font-weight: 700;
+  font-weight: 800;
 }
 
 .table-responsive.card{
@@ -2216,8 +2253,10 @@ p.card-text{
   cursor: pointer;
 }
 #phone{
-  border-left: 0;
   border-radius: 0;
+}
+.input-group #phone{
+  border-left: 0;  
 }
 .sc_form_donate #wizard{
   width: 100%;
@@ -2261,8 +2300,14 @@ p.card-text{
 .table tbody tr td{
   font-size: 16px !important;
 }
-.table-responsive.card{
+/*.table-responsive.card{
   word-wrap: inherit !important;
+}*/
+.sc_fund_transparency .table.table-fixed{
+  min-width: 500px;
+}
+.footer{
+  margin-top: 70px;
 }
 @media (max-width: 1200px){
   .table-responsive{
@@ -2276,7 +2321,11 @@ p.card-text{
     font-size: 32px;
   }
   .banner-donasi .h4-banner-beranda{
-    font-size: 18px;
+    /*font-size: 18px;*/
+    font-size: 20px;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    margin-top: 12px;
   }
   .banner-donasi .text-kabinet{
     margin-bottom: 40px !important;
@@ -2316,6 +2365,10 @@ p.card-text{
   }
   .sc_donate h5{
     width: 70%;
+  }
+  .artikel .h3-banner-beranda{
+    width: 70%;
+    margin-top: 0;
   }
 }
 @media (max-width: 557px){
@@ -2362,6 +2415,12 @@ p.card-text{
   }
   .table tbody tr td{
     font-size: 16px !important;
+  }
+  .artikel .h1-banner-beranda{
+    letter-spacing: 0 !important;
+  }
+  .artikel .h3-banner-beranda{
+    width: 80%;
   }
 }
 @media (max-width:  400px){
