--- a/app/views/component/uploadlib.html
+++ b/app/views/component/uploadlib.html
@@ -1,3 +1,4 @@
+<script src="<?php echo $var['app_assets']; ?>/_js/multi/jquery.MultiFile.js" type="text/javascript" language="javascript"></script>
 <script>
 	function open_popup(id)
 	{
